kubernetes/k8s-deployment.yaml
###################################
# abcall-payment-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abcall-reports-api
  labels:
    app: abcall-reports-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abcall-reports-api
  template:
    metadata:
      labels:
        app: abcall-reports-api
    spec:
      containers:
        - name:  abcall-reports-api
          image: abcall.azurecr.io/abcall-reports-api:2.0.1
          ports:
            - containerPort: 3008
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: abcall-reports-api-service
spec:
  type: LoadBalancer
  selector:
    app: abcall-reports-api
  ports:
    - protocol: TCP
      port: 3008
      targetPort: 3008
